<resources>
    <string name="app_name">Court Counter</string>
    <string name="ringside">Ringside</string>
    <string name="counter">Counter</string>
    <string name="settings">Settings</string>
    <string name="select_number_of_rounds">Select number of rounds</string>
    <string name="left_corner">Left Corner:</string>
    <string name="name">Name</string>
    <string name="right_corner">Right Corner:</string>
    <string name="start">Start</string>
</resources>
