<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrview"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.courtcounter.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_whole_screen">

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/leftTitle"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/ringside"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="@dimen/large"/>

            <ImageView
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:src="@drawable/boxer" />

            <TextView
                android:id="@+id/rightTitle"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/counter"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="@dimen/large"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/baseLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_settings"
                android:text="@string/settings"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size_options" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_marginTop="@dimen/option_margin_top"
                android:layout_weight="0.5">

                <TextView
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/select_number_of_rounds" />

                <NumberPicker
                    android:id="@+id/numpick"
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_marginTop="@dimen/option_margin_top"
                android:layout_weight="0.5">

                <TextView
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/left_corner" />

                <EditText
                    android:id="@+id/lcorner"
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_marginTop="@dimen/option_margin_top"
                android:layout_weight="0.5">

                <TextView
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/right_corner" />

                <EditText
                    android:id="@+id/rcorner"
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/name" />

            </LinearLayout>

            <Button
                android:id="@+id/startBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="@dimen/button_margin_top"
                android:onClick="getSettings"
                android:text="@string/start">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/roundStats"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/stats_margin_top"
            android:orientation="vertical">
        </LinearLayout>
    </LinearLayout>
</ScrollView>
